--- a/BluLogistics/Views/Autores/Index.cshtml
+++ b/BluLogistics/Views/Autores/Index.cshtml
@@ -1,5 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<BluLogistics.Entitys.AutoresView>
+
 @{
+    ViewData["Title"] = "Index";
 }
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Crear un Nuevo Autor</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AutoresID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Apellidos)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AutoresID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Apellidos)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.AutoresID">Modificar</a> |
+                <a asp-action="Details" asp-route-id="@item.AutoresID">Detalle</a> |
+                <a asp-action="Delete" asp-route-id="@item.AutoresID">Borrar</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
