--- a/BluLogistics/Views/Shared/_Layout.cshtml
+++ b/BluLogistics/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Editoriales" asp-action="Index">Editoriales</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Autores" asp-action="Index">Autores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="libros" asp-action="Index">Libros</a>
+                        </li>
                     </ul>
                 </div>
             </div>
